Service-Service-Communication/NS.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    monitoring: prometheus
    istio-injection: enabled
