Service-Service-Communication/AppV1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ss-app-v1
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ss-app
      version: v1
  template:
    metadata:
      labels:
        app: ss-app
        version: v1
        istio: monitor
    spec:
      containers:
      - image: legendlight/app:latest
        imagePullPolicy: Always
        name: ss-app
        ports:
        - name: http
          containerPort: 8080
