Service-Service-Communication/K8SService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ss-app
  namespace: staging
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: ss-app
