Service-Service-Communication/DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ss-app
  namespace: staging
spec:
  host: ss-app
  subsets:
  - name: v1
    labels:
      app: ss-app
      version: v1
  - name: v2
    labels:
      app: ss-app
      version: v2
